fix black and white logos being blurry on retina screens

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -260,6 +260,7 @@ button:focus {
 
 .sponsor-supernova{
 	display: inline-block;
+	-webkit-transform: translateZ(0);
 	margin: 0 auto;
 	width: 80%;
 	margin-bottom: 20px;
@@ -273,13 +274,13 @@ button:focus {
 	margin-top: 10px;
 	opacity:0.5;
 	filter:alpha(opacity=50);
+	-webkit-transform: translateZ(0);
 	vertical-align:middle;
 	filter:grayscale(100%);
 		-webkit-filter:grayscale(100%);
 		-ms-filter:grayscale(100%);
 		-o-filter:grayscale(100%);
 	filter:gray;
-	-webkit-filter:grayscale(100%);
 	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
 }
 
